# amd-smu-tools

./: .gitignore  Cargo.toml  README.md
crates/amd-smu-cli/: Cargo.toml
crates/amd-smu-cli/src/: main.rs  output.rs
crates/amd-smu-lib/: Cargo.toml
crates/amd-smu-lib/src/: codename.rs  error.rs  lib.rs  pmtable.rs  smu.rs
crates/amd-smu-lib/tests/: integration.rs
crates/amd-smu-tui/: Cargo.toml
crates/amd-smu-tui/src/: app.rs  main.rs  ui.rs
docs/plans/: 2026-01-19-rust-smu-sensors-design.md  2026-01-19-rust-smu-sensors-impl.md
scripts/: analyze_pm_table.py  analyze_temps.py
