[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/user/amd-smu-tools"

[workspace.dependencies]
amd-smu-lib = { path = "crates/amd-smu-lib" }
thiserror = "2"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
humantime = "2"
ratatui = "0.29"
crossterm = "0.28"
